# psy-benchmark-verifier

./: .gitignore  Cargo.toml  Makefile  README.md  install.bat  install.sh  realm_root_jos_map.json  run.sh  rustfmt.toml
.github/workflows/: release.yml
src/: api.md  config.rs  counter.rs  handler.rs  input.json  lib.rs  main.rs  models.rs  proof.json  prove.rs  raw_input.json  raw_proof.json  services.rs  user.md
