[workspace]

[package]
name = "psy_validator"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"

[lib]
name = "psy_validator"
path = "src/lib.rs"

[[bin]]
name = "psy_validator_cli"
path = "src/main.rs"

[dependencies]
# Dependencies from parth-generic-v1 workspace
psy_core = { git = "https://github.com/QEDProtocol/parth-generic-v1", rev = "11c976e69a6ad2c851d54600dfce92eaf3923b3d" }
psy_data = { git = "https://github.com/QEDProtocol/parth-generic-v1", rev = "11c976e69a6ad2c851d54600dfce92eaf3923b3d" }
psy_worker_core = { git = "https://github.com/QEDProtocol/parth-generic-v1", rev = "11c976e69a6ad2c851d54600dfce92eaf3923b3d" }
psy_plonky2_circuits = { git = "https://github.com/QEDProtocol/parth-generic-v1", rev = "11c976e69a6ad2c851d54600dfce92eaf3923b3d" }
psy_plonky2_basic_helpers = { git = "https://github.com/QEDProtocol/parth-generic-v1", rev = "11c976e69a6ad2c851d54600dfce92eaf3923b3d" }
parth_core = { git = "https://github.com/QEDProtocol/parth-generic-v1", rev = "11c976e69a6ad2c851d54600dfce92eaf3923b3d" }

# Web framework
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.43.0", features = ["full"] }
# HTTP client
reqwest = { version = "0.13.1", features = ["json"] }

# Async utilities
futures = { version = "0.3.31" }

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"

# Crypto & ZK
plonky2 = { git = "https://github.com/PsyProtocol/plonky2-hwa", rev = "1dfe6112c3eca3668c15820755371a8a3e75f934", features = ["ts-rs"] }
hex = "0.4.3"

# Error handling
anyhow = "1.0.75"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = [
    "std",
    "env-filter",
    "json",
    "chrono",
    "ansi"
] }

clap = { version = "4.5.53", features = ["derive", "env"] }
dotenv = "0.15"
tower-http = { version = "0.6", features = ["full"] }

[lints.rust]
unsafe_code = "forbid"
unused = "warn"
missing_docs = "warn"

[dev-dependencies]
tower = { version = "0.5", features = ["full"] }
tempfile = "3.8"

[profile.release]
debug = false          # Remove debug symbols (was true - major size contributor)
strip = "symbols"      # Strip symbols from binary
lto = true             # Enable Link Time Optimization (best size reduction)
codegen-units = 1      # Single codegen unit for better optimization
panic = "abort"        # Smaller panic handling (no unwinding)
opt-level = 3          # Keep performance (use "s" or "z" for even smaller binaries)
