[package]
name = "psy-cli"
version = "0.7.1"
edition = "2021"
description = "Psy CLI Prover"
authors = ["Psy Protocol"]

[lib]
name = "psy_cli"
path = "src/lib.rs"

[[bin]]
name = "psy-cli"
path = "src/main.rs"

[dependencies]
indicatif = "0.17"
console = "0.15"
colored = "2.1"
atty = "0.2"
sha2 = "0.10"
# Dependencies from parth-generic-v1 workspace
psy_core = { git = "https://github.com/QEDProtocol/parth-generic-v1", rev = "0f0cdb333775d8bc650b440f34205ddb56ec84ea" }
psy_data = { git = "https://github.com/QEDProtocol/parth-generic-v1", rev = "0f0cdb333775d8bc650b440f34205ddb56ec84ea" }
psy_worker_core = { git = "https://github.com/QEDProtocol/parth-generic-v1", rev = "0f0cdb333775d8bc650b440f34205ddb56ec84ea" }
psy_plonky2_circuits = { git = "https://github.com/QEDProtocol/parth-generic-v1", rev = "0f0cdb333775d8bc650b440f34205ddb56ec84ea" }
psy_plonky2_basic_helpers = { git = "https://github.com/QEDProtocol/parth-generic-v1", rev = "0f0cdb333775d8bc650b440f34205ddb56ec84ea" }
parth_core = { git = "https://github.com/QEDProtocol/parth-generic-v1", rev = "0f0cdb333775d8bc650b440f34205ddb56ec84ea" }

# Web framework
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.43.0", features = ["full"] }
# HTTP client
reqwest = { version = "0.13.1", features = ["json"] }

# Async utilities
futures = { version = "0.3.31" }
once_cell = "1.19"

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "=1.3.3" }

# Crypto & ZK
plonky2 = { git = "https://github.com/PsyProtocol/plonky2-hwa", rev = "1dfe6112c3eca3668c15820755371a8a3e75f934", features = ["ts-rs"] }
hex = "0.4.3"

# Error handling
anyhow = "1.0.75"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = [
    "std",
    "env-filter",
    "json",
    "chrono",
    "ansi"
] }

clap = { version = "4.5.53", features = ["derive", "env"] }
dotenv = "0.15"
tower-http = { version = "0.6", features = ["full"] }

[lints.rust]
unsafe_code = "forbid"
unused = "warn"
missing_docs = "warn"

[dev-dependencies]
tower = { version = "0.5", features = ["full"] }
tempfile = "3.8"

[profile.release]
debug = false          # Remove debug symbols (was true - major size contributor)
strip = "symbols"      # Strip symbols from binary
lto = true             # Enable Link Time Optimization (best size reduction)
codegen-units = 1      # Single codegen unit for better optimization
panic = "abort"        # Smaller panic handling (no unwinding)
opt-level = 3          # Keep performance (use "s" or "z" for even smaller binaries)
